<?xml version="1.0"?>
<package format="3">
  <name>pycppad</name>
  <version>0.0.0</version>
  <description>Python bindings for CppAD and CppADCodeGen using Boost.Python</description>
  <maintainer email="rohan.budhiraja@inria.fr">Justin Carpentier</maintainer>
  <author>Rohan Budhiraja</author>
  <author>Justin Carpentier</author>
  <license>BSD</license>

  <url type="website">https://github.com/simple-robotics/pycppad</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>cppad</depend>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
